--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5",
     "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
