--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "styled-components": "^5.3.5",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
